# PD-MUSE

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: manuscript_package_section.md  theory.md
examples/: apollo_mode_choice.py
src/pdmuse/: __init__.py  apollo.py  data.py  exceptions.py  generalized.py  metrics.py  mnl.py  nested.py  utils.py
tests/: test_apollo_generalized.py  test_apollo_mnl.py  test_apollo_nested.py  test_data.py
